index html & master css done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Pet game</title>
       <link rel="stylesheet" href="css/master.css">
+      <!-- font -->
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
 <div class="container">
@@ -22,14 +25,14 @@
   <div class="choose-pet">
     <p id="choose-pet-title">Choose your pet:</p>
       <div class="pet-links">
-      <a id="choose-dog" href="/javascript/dog.js">
-      <img src="img/dog.png" alt="dog" width="100"></a>
+      <a id="choose-dog" href="pets/dog.html">
+      <img class="img-link" src="img/dog.png" alt="dog" width="100"></a>
 
-      <a id="choose-cat" href="/javascript/cat.js">
-      <img src="img/cat.png" alt="cat" width="100"></a>
+      <a id="choose-cat" href="pets/cat.html">
+      <img class="img-link" src="img/cat.png" alt="cat" width="100"></a>
 
-      <a id="choose-parrot" href="/javascript/parrot.js">
-      <img src="img/parrot.png" alt="parrot" width="100"></a>
+      <a id="choose-parrot" href="pets/parrot.html">
+      <img class="img-link" src="img/parrot.png" alt="parrot" width="100"></a>
       </div>
   </div>
 
