colors and sizes edited

--- a/pets/dog.html
+++ b/pets/dog.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="pet-intro">
+      <p>Take care of your pet to make sure it stays happy! You can raise it's mood by playing with it!</p>
+    </div>
     <div class="container">
       <div class="pet">
         <div class="pet-message bubble">Woof woof!</div>
@@ -17,7 +20,7 @@
         <button class="action-button" type="button">feed</button>
         <button class="action-button" type="button">play</button>
         <button class="action-button" type="button">bathe</button>
-        <button class="action-button" type="button">pet</button>
+        <button class="action-button" type="button">pat</button>
       </div>
       <div class="pet-stats">
         <label for="hunger-stat">Hunger:</label>
@@ -31,6 +34,9 @@
 
         <label for="affection-stat">Affection:</label>
         <progress id="affection-stat" value="70" max="100"></progress>
+      </div>
+      <div class="return-home">
+        <a href="../index.html"><button type="button" class="return-home-button">Return to main page</button></a>
       </div>
 
     </div>
