--- a/pets/dog.html
+++ b/pets/dog.html
@@ -13,14 +13,14 @@
     </div>
     <div class="container">
       <div class="pet">
-        <div class="pet-message bubble">Woof woof!</div>
+        <div id="pet-message" class="pet-message bubble">Woof woof!</div>
           <img class="pet-image" src="../img/dog.png" alt="pet dog">
       </div>
       <div class="action-buttons">
-        <button class="action-button" type="button">feed</button>
-        <button class="action-button" type="button">play</button>
-        <button class="action-button" type="button">bathe</button>
-        <button class="action-button" type="button">pat</button>
+        <button class="action-button" type="button" value="feed" onclick="feed()">feed</button>
+        <button class="action-button" type="button" value="play" onclick="play()">play</button>
+        <button class="action-button" type="button" value="bathe" onclick="bathe()">bathe</button>
+        <button class="action-button" type="button" value="pat" onclick="pat()">pat</button>
       </div>
       <div class="pet-stats">
         <label for="hunger-stat">Hunger:</label>
@@ -38,10 +38,13 @@
       <div class="return-home">
         <a href="../index.html"><button type="button" class="return-home-button">Return to main page</button></a>
       </div>
-
+      <div class="pet-name">
+        <label for="pet-name-input">Pet's name:</label>
+        <input class="name-input" type="text" name="name-input" id="pet-name-input">
+      </div>
     </div>
 
 
-    <script src="../javascript/dog.js" charset="utf-8"></script>
+    <script src="../javascript/master.js" charset="utf-8"></script>
   </body>
 </html>
